--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,23 @@
-<h1 class="text-center mt-4">Listing all articles</h1>
+<h1>Article listing page</h1>
 
-<div class="flickr_pagination">
-  <%=  @articles, :container => false %>
-</div>
-<%= render 'article' %>
-<div class="flickr_pagination mb-4">
-  <%=  @articles, :container => false %>
-</div>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Description</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @articles.each do |article| %>
+
+    
+      <tr>
+        <td><%= article.title %> </td>   
+        <td><%= article.description %></td>   
+        <td>Some random</td>   
+      </tr>
+    <% end %>
+  </tbody>
+</table>
