--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -5,7 +5,7 @@
     <ul>
         <%@article.errors.full_messages.each do |msg|%>
             <li><%=msg%></li>
-    <%end%>
+        <%end%>
     </ul>  
 <% end %>
 
@@ -24,3 +24,5 @@
         <%= f.submit%>
     </p>
 <%end %>
+
+<%= link_to "Cancel and return to articles listing", articles_path %>
