--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Article</h1>
+<div id="page-content">
+    <h1 class="text-center mt-4">Create New Article</h1>
 
-<%= render "articles/form" %>
-
-<%= link_to "Return to articles listing", articles_path %>
+    <%= render "articles/form" %>
+</div>
