--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,7 +8,7 @@
       <!--Card-->
         <div class="card text-center shadow-lg mb-5 bg-white rounded">
           <div class="card-header font-italic">
-            by Michael Omordia
+            by <%= article.user.username if article.user%>
           </div>
           <div class="card-body">
             <h5 class="card-title"><%= link_to article.title, articles_path(article), class: "text-success" %></h5>
