--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,7 +8,7 @@
       <!--Card-->
         <div class="card text-center shadow-lg mb-5 bg-white rounded">
           <div class="card-header font-italic">
-            by Michael Omordia
+            by <%= @article.user.username if @article.user%>
           </div>
           <div class="card-body">
             <div class="card-text text-left"><%= simple_format(@article.description) %></div>
