--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,11 @@
 
 <h1 class="text-center mt-4">Listing all articles</h1>
 
+<div class="flickr_pagination">
+  <%= will_paginate @articles, :container => false %>
+</div>
+
+
 <%= render 'article' %>
 
 
@@ -10,3 +15,6 @@
 </p>
 
 
+<div class="flickr_pagination mb-4">
+  <%= will_paginate @articles, :container => false %>
+</div>
