--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,10 +7,10 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            
+          <li class="nav-item">   
             <%= link_to "Bloggers", users_path, class: "nav-link"%>
           </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Articles
@@ -24,6 +24,19 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Categories
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <% if logged_in? && current_user.admin?%>
+              <%= link_to "Create new category", new_category_path, class: "dropdown-item" %>
+            <% end %>
+              <%= link_to "View Categories", categories_path, class: "dropdown-item" %>
+            </div>
+          </li>
+
           <!--log in and log out, from helper code-->
           <% if logged_in? %>
             <li class="nav-item dropdown">
